product-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-Deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
      tier: backend
    template:
      metadata:
        labels:
          app: product
          tier: backend
      spec:
        containers:
          - name: product
            image: gauravd70/ecommerce-product:latest
            ports:
              - containerPort: 8080
            livenessProbe:
              httpGet:
                path: /products/actuator/health/liveness
                port: 8080
              initialDelaySeconds: 30
              periodSeconds: 10
              timeoutSeconds: 5
              failureThreshold: 3
            readinessProbe:
              httpGet:
                path: /products/actuator/health/readiness
                port: 8080
              initialDelaySeconds: 20
              periodSeconds: 5
              timeoutSeconds: 3
              failureThreshold: 3
