product-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  type: ClusterIP
  selector:
    app: product
    tier: backend
  ports:
    - protocal: TCP
      port: 80
      targetPort: 8080
